--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.xplo.matcolorlib"
+        applicationId "com.xplo.limecolorlib"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
@@ -22,7 +22,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 
-    implementation project(':matcolor')
+    implementation project(':limecolor')
 
 
 
